2004-06-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/Makefile.am (global_defines): Add -DGTKMM_DISABLE_DEPRECATED.

	* src/filetree.cc (FileTree::FileTree): Replace the deprecated
	set_sort_column_id() by set_sort_column().
	* src/filetreeprivate.cc
	(FileTree::ScopedBlockSorting::ScopedBlockSorting): ditto
	(FileTree::ScopedBlockSorting::~ScopedBlockSorting): ditto.

	* src/mainwindow.cc (MainWindow::on_go_next): Use scroll_to()
	in place of the deprecated scroll_to_mark().

2004-06-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/Makefile.am (stockimages.h): Strip the directory prefix
	from filenames if present, because of the possibility of automatic
	rule rewriting as done e.g. by SunOS make.

2004-06-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (dist_noinst_DATA): Add po/LINGUAS.

2004-06-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (apply_label_markup): Make use of the <small>
	convenience tag to simplify the markup slightly.

2004-06-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc: Include <libglademm/xml.h> instead of the
	whole <libglademm.h> to save a tiny bit of compile time.
	* src/controller.cc: ditto.

	* src/filebuffer.cc: Same here, and also replace <gconfmm.h> by
	<gconfmm/client.h>.
	* src/filetree.cc: ditto
	* src/mainwindow.cc: ditto
	* src/prefdialog.cc: ditto.

2004-06-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.cc (initialize_gettext): Only call
	bind_textdomain_codeset() if it is available.  I do hope there
	aren't any gettext implementations around that perform encoding
	conversion but don't have bind_textdomain_codeset()...

2004-06-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/sharedptr.h (SharedPtr): Add dummy template specializations
	for SharedObject and const SharedObject.  This makes it impossible
	to instantiate a generic SharedPtr<SharedObject>, which would be
	fatal because SharedObject doesn't have a virtual destructor.
